--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
-@import url('./fonts/fonts.scss');
+@import url('./assets/fonts/fonts.scss');
 /* Variables */
 :root {
   --font-family: 'Ddt-Regular';
